# beacon-research-agent

./: .gitignore  BEACON_SPEC.md  CLAUDE.md  README.md  deep_project_interview.md  project-manifest.md
02-api-streaming/: .env.example  claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  pyproject.toml  spec.md
02-api-streaming/implementation/: deep_implement_config.json
02-api-streaming/reviews/: iteration-1-opus.md
02-api-streaming/sections/: index.md  section-01-foundation.md  section-02-models.md  section-03-sessions.md  section-04-export.md  section-05-sse.md  section-06-routes-app.md
02-api-streaming/sections/.prompts/: section-01-foundation-prompt.md  section-02-models-prompt.md  section-03-sessions-prompt.md  section-04-export-prompt.md  section-05-sse-prompt.md  section-06-routes-app-prompt.md
02-api-streaming/server/: __init__.py  __main__.py  app.py  chat.py  models.py  rewrite.py  routes.py  sessions.py
02-api-streaming/tests/: conftest.py  test_chat.py  test_rewrite.py  test_routes.py
pipeline/: .env.example  ab_test_report.json  eval_report.json  pyproject.toml
pipeline/beacon/: evaluate.py  extract.py  models.py  pipeline.py  prompt_variants.py  prompts.py  search.py  synthesize.py
pipeline/beacon/evaluation/: __init__.py  ab_test.py  llm_judge.py  models.py  prompts.py  rag_metrics.py  runner.py  synthesis_metrics.py
pipeline/tests/: test_pipeline.py  test_prompts.py  test_search.py  test_synthesize.py
pipeline/tests/test_evaluation/: conftest.py  test_ab_test.py  (+4 more)
(+200 files in other folders)
