[project]
name = "beacon-api"
version = "0.1.0"
description = "Beacon API & Streaming Layer - FastAPI server wrapping the research pipeline"
requires-python = ">=3.11"
dependencies = [
    "beacon-pipeline",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=3.3.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
beacon-pipeline = { path = "../01-agent-pipeline" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
